# csoc-2021-task5-Django-REST-Framework

./: .gitignore  Pipfile  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
api/: access.py  admin.py  models.py  serializers.py  urls.py  views.py
api/migrations/: 0001_initial.py  0002_rename_todo_collab_todos.py  0003_auto_20210731_1821.py  0003_auto_20210804_1016.py  0003_auto_20210805_1343.py  0003_auto_20210807_1729.py  0003_auto_20210819_1124.py  0003_collaborator.py  0003_collaboratoroftodo.py  0003_todo_collab.py  0003_todo_collaborator.py  0003_todo_collaborators.py  0003_todo_collabs.py  0004_auto_20210804_1926.py  0004_auto_20210805_0947.py  0004_auto_20210805_1635.py  0004_auto_20210807_2213.py  0004_collaboratoroftodo_collaborator_username.py  0004_remove_todo_collaborating.py  0004_rename_collaborators_collaboration_user.py  0005_auto_20210805_1415.py  0005_auto_20210805_1702.py  0005_auto_20210806_1818.py  0005_rename_user_collaboration_collaborator.py  0006_alter_collaboration_todo.py  0006_auto_20210805_1515.py  0006_auto_20210807_1422.py  0006_auto_20210807_1601.py  0007_alter_collaboration_todo.py  0007_auto_20210805_1703.py  0007_auto_20210807_2104.py  0007_todo_release_date.py  0008_auto_20210805_1706.py  0008_auto_20210807_1848.py  0008_auto_20210808_1542.py  0008_rename_collaborator_collaboration_collaborators.py  0009_alter_collab_id.py  0010_alter_collab_id.py  0011_alter_collab_todo.py  0012_alter_collab_todo.py  (+14 more)
authentication/: models.py  serializers.py  urls.py  views.py
todo/: settings.py  urls.py
