[tool.poetry]
name = "csoc-2021-task5-django-rest-framework"
version = "0.1.0"
description = ""
authors = ["Lakshya Singh <lakshay.singh1108@gmail.com>"]
readme = "README.md"
packages = [{include = "csoc_2021_task5_django_rest_framework"}]

[tool.poetry.dependencies]
python = "3.7.10"
asgiref = "3.7.2"
dj-database-url = "2.0.0"
django-cors-headers = "4.1.0"
django = "3.2.19"
djangorestframework = "3.14.0"
drf-yasg = "1.21.6"
gunicorn = "20.1.0"
inflection = "0.5.1"
packaging = "23.1"
psycopg2-binary = "2.9.6"
pytz = "2023.3"
pyyaml = "6.0"
setuptools = "68.0.0"
sqlparse = "0.4.4"
typing-extensions = "4.7.0"
uritemplate = "4.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
